conceito header terminado

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped:wght@100;200;300;400;500;600;700&family=Recursive:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <!-- CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
@@ -24,20 +27,21 @@
           fill="#ecf0f1"/>
       </svg>
     </div>
-    <div class="burger-nav" data-burger="false">
-      <div class="burger" data-burger="false"></div>
-      <div class="burger" data-burger="false"></div>
-      <div class="burger" data-burger="false"></div>
+    <div class="botao-nav">
+      <div class="burger-nav" data-burger="false">
+        <div class="burger" data-burger="false"></div>
+        <div class="burger" data-burger="false"></div>
+        <div class="burger" data-burger="false"></div>
+      </div>
+    </div>
+    <div class="barra-pesquisa">
+      <form action="">
+        <input type="text" placeholder="O que você esta procurando?">
+        <button type="submit"><i class="fas fa-search"></i></button>
+      </form>
     </div>
       
   </header>
-  <h1>Ola</h1>
-  <h2>Ola</h2>
-  <h3>Ola</h3>
-  <h4>Ola</h4>
-  <h5>Ola</h5>
-  <h6>Ola</h6>
-  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus, eaque consectetur obcaecati nulla deserunt, magni laborum quae ipsam atque sed impedit corporis placeat est velit nemo eos ratione iste corrupti.</p>
 </body>
   <script src="main.js"></script>
 </html>
